--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,9 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Depends: 
+    tidyverse,
     R (>= 2.10)
+RoxygenNote: 7.3.1
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
